sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value swapped
	while (swapped) {
               ^AlgBubbleSort1:8: error: not found: value tab
		if (tab(i) > tab(i+1))
                    ^AlgBubbleSort1:10: error: not found: value tab
			val tmp=tab(i)
                                ^AlgBubbleSort1:11: error: not found: value tab
			tab(i)=tab(i+1)
                        ^AlgBubbleSort1:12: error: not found: value tab
			tab(i+1)=tmp
                        ^AlgBubbleSort1:13: error: missing arguments for method echange in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
			echange;
                        ^